feat(graph): adding graphql method
